--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+About online app?:
+
+
 Glossary?:
 1. **performHotelSearch**: This function is responsible for performing the hotel search based on the user's input. It takes the destination, check-in date, and check-out date as parameters. Inside the function, it filters the hotels from the `database` array based on the destination, sorts them by price in ascending order, and then dynamically generates the HTML elements to display the search results.
 
